--- a/app/src/main/res/drawable/progress.xml
+++ b/app/src/main/res/drawable/progress.xml
@@ -8,7 +8,7 @@
         <size android:width="76dip" android:height="76dip" />
         <gradient android:type="sweep" android:useLevel="false"
             android:startColor="@color/colorPrimaryMedDark"
-            android:endColor="#0fff"
+            android:endColor="#fff"
             android:angle="0"
             />
     </shape>
