--- a/app/src/main/res/layout/answer_option_element.xml
+++ b/app/src/main/res/layout/answer_option_element.xml
@@ -21,43 +21,49 @@
                 android:id="@+id/answer_option_text"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="5dp"
                 android:paddingStart="10dp"
                 android:paddingEnd="10dp"
-                android:layout_marginBottom="5dp" />
-            <ProgressBar
-                android:id="@+id/answer_option_progress"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:indeterminate="true"
-                android:indeterminateDrawable="@drawable/progress"/>
+                android:textAppearance="@style/TextAppearance.AppCompat" />
             <RelativeLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="5dp"
                 android:layout_gravity="center_horizontal">
-            <ImageView
-                android:id="@+id/answer_option_image"
-                android:contentDescription="@string/Poll_Answ_Option_Img_Desc"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:maxHeight="128dp"
-                android:scaleType="fitCenter"
+                <com.balysv.materialripple.MaterialRippleLayout
+                    android:layout_width="wrap_content"
+                    app:mrl_rippleOverlay="true"
+                    android:id="@+id/AnswerOptRipple"
+                    android:layout_height="wrap_content">
 
-                android:visibility="gone"
-                app:srcCompat="@drawable/ic_menu_gallery" />
+                    <ImageView
+                        android:id="@+id/answer_option_image"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:adjustViewBounds="true"
+                        android:contentDescription="@string/Poll_Answ_Option_Img_Desc"
+                        android:maxHeight="128dp"
+                        android:scaleType="fitCenter"
+                        android:visibility="gone"
+                        app:srcCompat="@drawable/ic_menu_gallery" />
+                </com.balysv.materialripple.MaterialRippleLayout>
+
                 <ImageView
-                    android:layout_width="48dp"
                     android:id="@+id/answer_option_icon"
-                    android:contentDescription="@string/Poll_Answ_Option_Img_Icon_Desc"
+                    android:layout_width="48dp"
                     android:layout_height="48dp"
-                    android:tint="@color/colorPrimaryMedLight"
-                    android:layout_alignBottom="@id/answer_option_image"
-                    android:layout_alignEnd="@id/answer_option_image"
+                    android:layout_alignEnd="@id/AnswerOptRipple"
+                    android:layout_alignBottom="@id/AnswerOptRipple"
                     android:layout_marginEnd="5dp"
                     android:layout_marginBottom="5dp"
-                    android:visibility="gone"
-                    android:src="@drawable/ic_loupe_black_24dp"/>
+                    android:padding="5dp"
+                    android:background="@drawable/round_btn"
+                    android:contentDescription="@string/Poll_Answ_Option_Img_Icon_Desc"
+                    android:src="@drawable/ic_loupe_black_24dp"
+                    android:tint="#fff"
+                    android:visibility="gone" />
             </RelativeLayout>
+
         </LinearLayout>
 
 
@@ -85,6 +91,7 @@
     <ProgressBar
         android:id="@+id/answer_option_bar"
         style="?android:attr/progressBarStyleHorizontal"
+        android:theme="@style/LoaderAccent"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="5dp"
