--- a/app/src/main/res/layout/fragment_creer_option_dialog.xml
+++ b/app/src/main/res/layout/fragment_creer_option_dialog.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:orientation="vertical"
     android:layout_height="match_parent"
     tools:context=".CreerOptionDialog">
 
     <LinearLayout
+        android:id="@+id/OptDialEditBtns"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
@@ -47,14 +47,14 @@
         </com.balysv.materialripple.MaterialRippleLayout>
     </LinearLayout>
 
-
-
     <RelativeLayout
-        android:layout_marginTop="5dp"
+        android:layout_below="@id/OptDialEditBtns"
+        android:id="@+id/OptDialAddBtn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <com.balysv.materialripple.MaterialRippleLayout
             android:layout_width="wrap_content"
+            android:layout_marginTop="5dp"
             android:layout_centerInParent="true"
             android:layout_height="wrap_content">
 
@@ -62,15 +62,21 @@
                 android:id="@+id/sondage_edit_question_add_option"
                 style="@style/buttonImageCustom"
                 android:layout_width="60dp"
-                android:contentDescription="@string/Create_Option_dialog_btn_desc"
                 android:layout_height="60dp"
+                android:background="@color/transparent"
+                android:contentDescription="@string/Create_Option_dialog_btn_desc"
                 android:scaleType="centerCrop"
                 android:src="@drawable/ic_ajout" />
     </com.balysv.materialripple.MaterialRippleLayout>
-
     </RelativeLayout>
-
+    <View
+        android:layout_below="@id/OptDialEditBtns"
+        android:layout_width="match_parent"
+        android:layout_height="5dp"
+        android:background="@drawable/shadow_top_down"
+        />
     <TextView
+        android:layout_below="@id/OptDialAddBtn"
         android:id="@+id/option_edit_error"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -79,13 +85,26 @@
         android:textColor="@color/colorRed" />
 
     <ListView
-        android:layout_width="match_parent"
-        android:descendantFocusability="beforeDescendants"
-        android:layout_height="fill_parent"
+        android:paddingTop="5dp"
+        android:paddingBottom="5dp"
+        android:clipToPadding="false"
+        android:layout_below="@id/option_edit_error"
+        android:paddingEnd="7dp"
+        android:paddingStart="7dp"
+        android:background="@color/LighterGrey"
         android:id="@+id/sondage_edit_question_option_liste"
-        >
+        android:layout_width="match_parent"
+        android:layout_height="fill_parent"
+        android:descendantFocusability="beforeDescendants"
+        android:divider="@color/transparent"
+        android:dividerHeight="10dp">
 
 
     </ListView>
-
-</LinearLayout>
+    <View
+        android:layout_below="@id/option_edit_error"
+        android:layout_width="match_parent"
+        android:layout_height="5dp"
+        android:background="@drawable/shadow_top_down"
+        />
+</RelativeLayout>
