--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -1,13 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingStart="7dp"
-    android:paddingEnd="7dp"
+    android:padding="7dp"
+    android:background="@drawable/background"
     tools:context=".LoginFragment">
 
+    <LinearLayout
+        android:layout_centerInParent="true"
+        android:orientation="vertical"
+        android:padding="7dp"
+        android:background="@drawable/list_item_bg"
+        android:layout_width="wrap_content"
+        android:minWidth="325dp"
+        android:layout_height="wrap_content">
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -37,9 +45,18 @@
         android:layout_height="wrap_content"
         android:textColor="@color/colorRed"
         android:visibility="invisible" />
+        <TextView android:id="@+id/login_password_forgotten"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/colorPrimary"
+            android:text="@string/Login_Forgotten"
+            android:clickable="true"
+            android:focusable="true"
+            />
     <com.balysv.materialripple.MaterialRippleLayout
         android:layout_width="match_parent"
         android:layout_marginTop="7dp"
+        app:mrl_rippleOverlay="true"
         android:layout_height="wrap_content">
 
         <Button
@@ -52,6 +69,7 @@
     <com.balysv.materialripple.MaterialRippleLayout
         android:layout_width="match_parent"
         android:layout_marginTop="7dp"
+        app:mrl_rippleOverlay="true"
         android:layout_height="wrap_content">
 
         <Button
@@ -61,5 +79,5 @@
             android:layout_height="wrap_content"
             android:text="@string/Login_Btn_Create" />
     </com.balysv.materialripple.MaterialRippleLayout>
-
-</LinearLayout>
+    </LinearLayout>
+</RelativeLayout>
