--- a/app/src/main/res/layout/fragment_publication_list.xml
+++ b/app/src/main/res/layout/fragment_publication_list.xml
@@ -1,45 +1,72 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:paddingStart="7dp"
-    android:paddingEnd="7dp"
+    android:background="@drawable/background"
     tools:context=".PublicationListFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <com.balysv.materialripple.MaterialRippleLayout
         android:layout_width="match_parent"
-        android:layout_marginBottom="5dp"
+        android:id="@+id/PubListRipple"
+        app:mrl_rippleOverlay="true"
         android:layout_height="wrap_content">
     <Button
         android:id="@+id/pub_list_add_btn"
         style="@style/buttonCustom"
+        android:background="#fff"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/Post_New_Post" />
     </com.balysv.materialripple.MaterialRippleLayout>
 
-    <ProgressBar
+    <!--<ProgressBar
+        android:layout_below="@id/PubListRipple"
+        android:layout_marginTop="5dp"
         android:id="@+id/pub_list_loader"
         style="?android:attr/progressBarStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:indeterminate="true"
-        android:indeterminateDrawable="@drawable/progress" />
+        android:indeterminateDrawable="@drawable/progress" />-->
     <TextView
+        android:layout_below="@id/PubListRipple"
+        android:layout_marginTop="5dp"
         android:layout_width="match_parent"
         android:textAlignment="center"
         android:visibility="gone"
         android:text="@string/Post_List_Empty"
         android:id="@+id/pub_list_empty"
         android:layout_height="wrap_content" />
-    <ListView
+    <android.support.v4.widget.SwipeRefreshLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@id/android:list"
-        android:headerDividersEnabled="false"
-        android:footerDividersEnabled="false" />
+        android:layout_below="@id/PubListRipple"
+        android:layout_height="fill_parent"
+        android:id="@+id/PubListRefresh">
+        <ListView
+            android:paddingTop="5dp"
+            android:paddingBottom="5dp"
+            android:clipToPadding="false"
+            android:paddingEnd="7dp"
+            android:paddingStart="7dp"
+            android:id="@id/android:list"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:divider="@color/transparent"
+            android:dividerHeight="10dp"
+            android:footerDividersEnabled="false"
+            android:headerDividersEnabled="false" />
+    </android.support.v4.widget.SwipeRefreshLayout>
 
-</LinearLayout>
+    <View
+        android:id="@+id/pub_list_shadow"
+        android:layout_below="@id/PubListRipple"
+        android:layout_width="match_parent"
+        android:layout_height="5dp"
+        android:visibility="gone"
+        android:background="@drawable/shadow_top_down"
+        />
+
+</RelativeLayout>
