--- a/app/src/main/res/layout/fragment_sondage_list.xml
+++ b/app/src/main/res/layout/fragment_sondage_list.xml
@@ -1,50 +1,77 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-
-    android:orientation="vertical">
+    android:background="@drawable/background">
     <!--tools:context="personnal.askinquery.SondageListFragment" xmlns:tools="http://schemas.android.com/tools"-->
 
     <com.balysv.materialripple.MaterialRippleLayout
+        android:id="@+id/PollListRipple"
         android:layout_width="match_parent"
-        android:layout_marginLeft="5dp"
-        android:layout_marginTop="5dp"
-        android:layout_marginRight="5dp"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        app:mrl_rippleOverlay="true">
 
         <Button
             android:id="@+id/sondage_ajout_btn"
             style="@style/buttonCustom"
             android:layout_width="match_parent"
-
             android:layout_height="wrap_content"
+            android:background="#fff"
             android:shadowColor="@color/LightGrey"
             android:text="@string/Sondage_New_Poll" />
 
 
     </com.balysv.materialripple.MaterialRippleLayout>
 
-    <ProgressBar
+
+    <!--<ProgressBar
+        android:layout_below="@id/PollListRipple"
         android:id="@+id/sondage_list_loader"
         style="?android:attr/progressBarStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
         android:indeterminate="true"
-        android:indeterminateDrawable="@drawable/progress" />
+        android:indeterminateDrawable="@drawable/progress" />-->
+
     <TextView
-        android:layout_width="match_parent"
-        android:textAlignment="center"
         android:id="@+id/sondage_list_empty"
-        android:text="@string/Sondage_List_Empty"
-        android:visibility="gone"
-        android:layout_height="wrap_content" />
-    <ListView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@id/android:list"
-        android:headerDividersEnabled="false"
-        android:footerDividersEnabled="false" />
+        android:layout_height="wrap_content"
+        android:layout_below="@id/PollListRipple"
+        android:layout_marginTop="5dp"
+        android:text="@string/Sondage_List_Empty"
+        android:textAlignment="center"
+        android:visibility="gone" />
+
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/PollRefresh"
+        android:layout_width="match_parent"
+        android:layout_height="fill_parent"
+        android:layout_below="@id/PollListRipple">
+
+        <ListView
+            android:id="@id/android:list"
+            android:layout_width="match_parent"
+            android:layout_height="fill_parent"
+            android:clipToPadding="false"
+            android:divider="@color/transparent"
+            android:dividerHeight="10dp"
+            android:footerDividersEnabled="false"
+            android:headerDividersEnabled="false"
+            android:paddingStart="7dp"
+            android:paddingTop="5dp"
+            android:paddingEnd="7dp"
+            android:paddingBottom="5dp" />
+    </android.support.v4.widget.SwipeRefreshLayout>
+
+    <View
+        android:id="@+id/sondage_list_shadow"
+        android:layout_width="match_parent"
+        android:layout_height="5dp"
+        android:layout_below="@id/PollListRipple"
+        android:background="@drawable/shadow_top_down"
+        android:visibility="gone" />
 
     <!--<TextView
         android:id="@id/android:empty"
@@ -53,4 +80,4 @@
         android:text="Il n'y a rien ici."
         android:textAppearance="@style/TextAppearance.AppCompat.Headline"/>-->
 
-</LinearLayout>
+</RelativeLayout>
