--- a/app/src/main/res/layout/question_edit_element.xml
+++ b/app/src/main/res/layout/question_edit_element.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:paddingEnd="7dp"
-    android:paddingStart="7dp"
+    android:padding="7dp"
+    android:background="@drawable/list_item_bg"
     android:layout_height="wrap_content">
 
     <LinearLayout
@@ -17,7 +17,10 @@
             android:textAppearance="@style/TextAppearance.AppCompat.Headline"
             android:layout_weight="3" />
         <com.balysv.materialripple.MaterialRippleLayout
+            xmlns:app="http://schemas.android.com/apk/res-auto"
+            app:mrl_rippleRoundedCorners="20dp"
             android:layout_width="wrap_content"
+
             android:layout_height="wrap_content">
 
             <ImageButton
@@ -25,10 +28,10 @@
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:background="@drawable/round_btn"
-                android:paddingTop="4dp"
-                android:paddingBottom="4dp"
-                android:src="@drawable/ic_delete"
                 android:contentDescription="@string/Create_Question_Elem_Delete_Desc"
+                android:padding="5dp"
+                android:scaleType="centerInside"
+                android:src="@drawable/ic_delete"
                 android:tint="@color/colorRed" />
         </com.balysv.materialripple.MaterialRippleLayout>
     </LinearLayout>
@@ -92,16 +95,11 @@
             style="@style/buttonCustom"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@color/transparent"
             android:drawableEnd="@drawable/ic_fleche_droite"
             android:paddingStart="10dp"
             android:paddingEnd="10dp"
             android:text="@string/Create_Question_Elem_Option_Btn" />
     </com.balysv.materialripple.MaterialRippleLayout>
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="2dp"
-        android:background="@color/LightGrey"
-        android:layout_marginTop="5dp"
-        android:layout_marginBottom="5dp"/>
 
 </LinearLayout>
