--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,12 +4,15 @@
     <color name="colorPrimaryLight">#5AD3D3</color>
     <color name="colorPrimaryMedLight">#32C6C6</color>
     <color name="colorPrimary">#0fbdbd</color>
-    <color name="colorPrimaryMedDark">#009C9C</color>
+    <color name="colorPrimaryMedDark">#009c9c</color>
     <color name="colorPrimaryDark">#007676</color>
+    <color name="colorPrimaryDarkTrans">#AA007676</color>
+
 
     <color name="colorSecondaryLight">#6B8DDB</color>
     <color name="colorSecondaryMedLight">#456FD0</color>
     <color name="colorSecondary">#2355C9</color>
+    <color name="colorSecondaryTrans">#662355C9</color>
     <color name="colorSecondaryMedDark">#0D3DAD</color>
     <color name="colorSecondaryDark">#0A2F84</color>
 
@@ -30,6 +33,7 @@
     <color name="colorGreen">#ff669900</color>
     <color name="LightGrey">#c8c8c8</color>
     <color name="LighterGrey">#e6e6e6</color>
+    <color name="Blanc">#fafafa</color>
     <!-- Pallette -->
 
 </resources>
